fixed upload API
